--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -42,7 +42,7 @@ signs:
       # need to pass the batch flag to indicate its not interactive.
       - "--batch"
       - "--local-user"
-      - "{{ .Env.GPG_FINGERPRINT }}" # set this environment variable for your signing key
+      - "F23DB7A48BC641DB6007DE8C59171841F9A5F061" # set this environment variable for your signing key
       - "--output"
       - "${signature}"
       - "--detach-sign"
